# Crawler-naman

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/build_logs/: build_logs17July.md  build_logs18July.md  build_logs20July.md  build_logs21July.md
docs/daily_journals/: daily_journal17July.md  daily_journal18July.md  daily_journal20July.md  daily_journal21July.md
docs/design proposal/: crawler_design_proposal.md  fetcher_design_proposal.md  frontier_design_proposal.md  page_store_design_proposal.md  seen_store_design_proposal.md  url_normaliser_design_proposal.md
include/: crawler.h  fetcher.h  frontier.h  pageStore.h  seenStore.h  urlNormalizer.h
src/: crawler.cpp  fetcher.cpp  frontier.cpp  pageStore.cpp  seenStore.cpp  urlNormalizer.cpp
storage/: pages.txt
